test/parser/Queries/syntax_errors/fail_K-ForExprWithout-41.xq
:*****foo*************** for ************ let ****************** eq ** let ***:)
(:  where Test: K-ForExprWithout-41 eq   let                           :)
(:foo Written  Frans Englich       ne                 for         :)
(: Date: $  2006-10-05T18:29:37+02:00               ne          :)
(: Purpose: Variable which is not in foo              :)
 let (:****************************************** for **********:)
foo $ for $a in (1, eq  2, where  3) for , $b in (1, 2, 3,  $ $b)
return $a, $b